--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
-  "dependencies": {
+  "dependencies": { 
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "expo": "^48.0.7",
@@ -13,10 +13,12 @@
     "expo-constants": "~14.2.1",
     "expo-device": "~5.2.1",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.2.0",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
@@ -24,6 +26,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1"
