--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
-  "dependencies": { 
+  "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "expo": "^48.0.7",
@@ -13,6 +13,7 @@
     "expo-constants": "~14.2.1",
     "expo-device": "~5.2.1",
     "expo-font": "~11.1.1",
+    "expo-image-manipulator": "^11.3.0",
     "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.2.0",
