--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
-    "expo": "^48.0.7",
+    "expo": "~48.0.18",
     "expo-asset": "~8.9.1",
     "expo-constants": "~14.2.1",
     "expo-device": "~5.2.1",
     "expo-font": "~11.1.1",
-    "expo-image-manipulator": "^11.3.0",
+    "expo-image-manipulator": "~11.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
-    "expo-router": "^1.2.0",
-    "expo-splash-screen": "~0.18.1",
-    "expo-status-bar": "~1.4.2",
+    "expo-router": "^1.0.0",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
     "firebase": "^10.0.0",
+    "jest": "^29.2.1",
+    "jest-expo": "^49.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
@@ -29,14 +32,19 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-url-polyfill": "^1.3.0",
-    "react-native-web": "~0.18.7",
+    "react-native-web": "~0.18.11",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
+    "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@types/react-redux": "^7.1.25"
+    "@babel/preset-env": "^7.22.7",
+    "@babel/preset-react": "^7.22.5",
+    "@types/react-redux": "^7.1.25",
+    "babel-jest": "^29.6.1",
+    "expo-modules-autolinking": "^1.5.0",
+    "redux-mock-store": "^1.5.4"
   },
   "resolutions": {
     "metro": "^0.73.7",
